add updateEntityFromRequest method to WorkoutMapper for handling workout updates